@@ -19,6 +19,7 @@
 
 #include <functional>
 #include <ios>
+#include <list>
 #include <memory>
 #include <stdexcept>
 
@@ -44,6 +45,24 @@ class result_pipeline;
 class result_row;
 class result_sql_cursor;
 } // namespace pqxx::internal::gate
+
+
+namespace pqxx::internal
+{
+// 9.0: Remove this, just use the notice handler in connection/result.
+/// Various callbacks waiting for a notice to come in.
+struct notice_waiters
+{
+  std::function<void(zview)> notice_handler;
+  std::list<errorhandler *> errorhandlers;
+
+  notice_waiters() =default;
+  notice_waiters(notice_waiters const &) =delete;
+  notice_waiters(notice_waiters &&) =delete;
+  notice_waiters &operator=(notice_waiters const &) =delete;
+  notice_waiters &operator=(notice_waiters &&) =delete;
+};
+} // namespace pqxx::internal
 
 
 namespace pqxx
@@ -383,7 +402,7 @@ private:
    * actual function does not get deallocated if the connection is destroyed
    * while this result still exists.
    */
-  std::shared_ptr<std::function<void(zview)>> m_notice_handler;
+  std::shared_ptr<pqxx::internal::notice_waiters> m_notice_waiters;
 
   internal::encoding_group m_encoding;
 
@@ -400,7 +419,7 @@ private:
   result(
     std::shared_ptr<internal::pq::PGresult> const &rhs,
     std::shared_ptr<std::string> const &query,
-    std::shared_ptr<std::function<void(zview)>> &notice_handler,
+    std::shared_ptr<pqxx::internal::notice_waiters> const &waiters,
     internal::encoding_group enc);
 
   PQXX_PRIVATE void check_status(std::string_view desc = ""sv) const;
