@@ -51,9 +51,9 @@ void pqxx::internal::clear_result(pq::PGresult const *data) noexcept
 pqxx::result::result(
   std::shared_ptr<pqxx::internal::pq::PGresult> const &rhs,
   std::shared_ptr<std::string> const &query,
-  std::shared_ptr<std::function<void(zview)>> &notice_handler,
+  std::shared_ptr<pqxx::internal::notice_waiters> const &notice_waiters,
   internal::encoding_group enc) :
-        m_data{rhs}, m_query{query}, m_notice_handler{notice_handler},
+        m_data{rhs}, m_query{query}, m_notice_waiters{notice_waiters},
 	m_encoding(enc)
 {}
 
